Alteração do background do body

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -9,7 +9,7 @@ body {
   font-family: 'Roboto', sans-serif;
   line-height: 1.6;
   font-size: 16px;
-  background-color: gray;
+  background-color: #EFF4F0;
   color: #333;
 }
 
