Definição de max-width para o homeContainer

--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,5 +1,7 @@
 .homeContainer {
+  margin: 2rem auto;
+  max-width: 50rem;
   display: flex;
   flex-direction: column;
-  gap: 4px;
+  gap: 8px;
 }
